Add blueprint explorer UI and endpoints

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
           <button data-view="credentials" class="nav-item active">Credentials</button>
           <button data-view="apis" class="nav-item">APIs</button>
           <button data-view="rules" class="nav-item">Transformation Rules</button>
+          <button data-view="blueprints" class="nav-item">Blueprints</button>
           <button data-view="tables" class="nav-item">Tables</button>
           <button data-view="views" class="nav-item">Views</button>
           <button data-view="workflows" class="nav-item">Workflows</button>
