--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,9 +16,9 @@
           <button data-view="rules" class="nav-item">Transformation Rules</button>
           <button data-view="blueprints" class="nav-item">Blueprints</button>
           <button data-view="tables" class="nav-item">Tables</button>
-          <button data-view="views" class="nav-item">Views</button>
-          <button data-view="workflows" class="nav-item">Workflows</button>
-          <button data-view="automations" class="nav-item">Automations</button>
+          <button data-view="aiTasks" class="nav-item">AI Tasks</button>
+          <button data-view="aiWorkflows" class="nav-item">AI Workflows</button>
+          <button data-view="aiAutomations" class="nav-item">AI Automations</button>
         </nav>
         <div class="nav-footer">
           <button id="run-pipeline" class="primary">Run ETL Pipeline</button>
